src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_keys_respect_shortcuts_inhibitor.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key
inhibiting, virtual key
app: key pressed: 16
app: key released: 16
not inhibiting, virtual key
