src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_press_of_physically_held_key_is_absorbed.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical press
app: key pressed: 16
virtual press
virtual release
physical release
app: key released: 16
virtual press
app: key pressed: 16
physical press
physical release
virtual release
app: key released: 16
