src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_repeated_modifier_press_counts_once.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual shift press, twice
app: key pressed: 42
app: modifiers: depressed=1, latched=0, locked=0, group=0
virtual shift release
app: key released: 42
app: modifiers: depressed=0, latched=0, locked=0, group=0
