src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_set_layout_reverted_on_removal.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual keyboard layout
app: modifiers: depressed=0, latched=0, locked=0, group=1
virtual keyboard destroyed
app: modifiers: depressed=0, latched=0, locked=0, group=0
