src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_set_locks_reverted_on_removal.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual keyboard modifiers
app: modifiers: depressed=1, latched=0, locked=16, group=0
virtual keyboard destroyed
app: modifiers: depressed=0, latched=0, locked=0, group=0
