src/tests/snapshots/niri__tests__virtual_keyboard__virtual_keyboard_shift_press_released_on_removal.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual keyboard shift press
app: key pressed: 42
app: modifiers: depressed=1, latched=0, locked=0, group=0
virtual keyboard destroyed
app: key released: 42
app: modifiers: depressed=0, latched=0, locked=0, group=0
